--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -154,6 +154,10 @@
                     pathn = "@(Url.Action("StateIndex", "State"))",
                         i = 0;
                     break;
+                case "#areaMatch":
+                    pathn = "@(Url.Action("AreaMatchIndex", "Area"))",
+                        i = 0;
+                    break;
                 default:
                     pathn = "@(Url.Action("GroupIndex", "Group"))",
                         i = 0;
